--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/*add colors for UV index(favorable-green, moderate-yellow, severe-red)*/
 :root {
     --display: flex;
     --column: column;
@@ -21,4 +20,17 @@ section {
 .iconSizing {
     width: 50px;
     height: 50px;
+}
+/* colors for uvIndex*/
+.favorable {
+    background-color: lightgreen;
+}
+.moderate {
+    background-color: yellow;
+}
+.high {
+    background-color: orange;
+}
+.severe {
+    background-color: red;
 }
